--- a/css/ie8-cacl.html
+++ b/css/ie8-cacl.html
@@ -16,12 +16,12 @@
 			width: 30px;
 			height: 30px;
 			background: yellow;
-			/* margin-left: -40px; */
+			margin-left: -40px;
 			display: inline-block;
 		}
 		.a3 {
 			width: 100%;
-			height: 10px;
+			height: 20px;
 			display: inline-block;
 			background:mediumvioletred;
 		}
@@ -31,7 +31,7 @@
 	ie8下代替cacl的方法
 	<div class="a1">
 		<div class="a2">1</div>
-		<!-- <div class="a3">2</div> -->
+		<div class="a3">2</div>
 	</div>
 </body>
 </html>
